test/spec_vectors/br_if/fail/module_28.wat
(module (func $unbound-nested-label (block (block (br_if 5 (i32.const 1))))))